# mcp_demo

./: .gitignore  README.md  loa.db  pyproject.toml
src/: ui_app.py
src/agent_app/: agent.py  mcpClient.py  nodes.py
src/loa_mcp_uv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_server/: server_sse.py
src/mock_workday_api/: __init__.py  app.py
src/shared/: email_outbox.py  extraction.py  extraction_llm.py  friendly_message_llm.py  friendly_message_llm_success.py  intent_llm.py  model_schema.py  settings.py  workday_client.py
